--- a/src/pages/admin.astro
+++ b/src/pages/admin.astro
@@ -29,7 +29,7 @@ const config = {
       deleteMedia: 'Delete "{{path}}"'
     }
   },
-  search: "true",
+  search: true,
   media_folder: "src/assets",
   public_folder: "/src/assets",
   media_library: {
